--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Школа будущего</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,7 +20,7 @@
           <div class="header__top">
             <div class="header__top-title">
               <a class="header__top-logo logo" href="#"
-                ><img src="/img/basic_pictures/logo.png" alt=">Школа будущего"
+                ><img src="./img/basic_pictures/logo.png" alt=">Школа будущего"
               /></a>
               <div class="burger">
                 <input type="checkbox" id="check" />
@@ -112,13 +112,13 @@
                   <a href="#">
                     <img
                       class="net-img"
-                      src="/img/basic_pictures/icon_telegramm.png"
+                      src="./img/basic_pictures/icon_telegramm.png"
                       alt="telegramm"
                   /></a>
                   <a href="https://web.whatsapp.com/" target="_blank"
                     ><img
                       class="net-img"
-                      src="/img/basic_pictures/icon_watsapp.png"
+                      src="./img/basic_pictures/icon_watsapp.png"
                       alt="watsapp"
                   /></a>
                 </div>
@@ -126,7 +126,7 @@
             </div>
             <div class="welcome__img">
               <img
-                src="/img/img/welcome/welcome_img.png"
+                src="./img/img/welcome/welcome_img.png"
                 alt="welcome_people"
               />
             </div>
@@ -139,23 +139,23 @@
         <h2 class="top-title">Кому подходит онлайн образование?</h2>
         <div class="education__block-view">
           <div class="education__block-item">
-            <img src="/img/img/education/book.png" alt="book" />
+            <img src="./img/img/education/book.png" alt="book" />
             <p>Для тех, кто хочет получать знания</p>
           </div>
           <div class="education__block-item">
-            <img src="/img/img/education/airplane.png" alt="book" />
+            <img src="./img/img/education/airplane.png" alt="book" />
             <p>Для путешественников</p>
           </div>
           <div class="education__block-item">
-            <img src="/img/img/education/people.png" alt="book" />
+            <img src="./img/img/education/people.png" alt="book" />
             <p>Для семейного обучения</p>
           </div>
           <div class="education__block-item">
-            <img src="/img/img/education/ball.png" alt="book" />
+            <img src="./img/img/education/ball.png" alt="book" />
             <p>Для спортсменов</p>
           </div>
           <div class="education__block-item">
-            <img src="/img/img/education/route.png" alt="book" />
+            <img src="./img/img/education/route.png" alt="book" />
             <p>Для проживающих за рубежом</p>
           </div>
         </div>
@@ -175,13 +175,13 @@
                 <a href="https://telegram.org/" target="_blank">
                   <img
                     class="net-img"
-                    src="/img/basic_pictures/icon_telegramm.png"
+                    src="./img/basic_pictures/icon_telegramm.png"
                     alt="telegramm"
                 /></a>
                 <a href="https://web.whatsapp.com/" target="_blank"
                   ><img
                     class="net-img"
-                    src="/img/basic_pictures/icon_watsapp.png"
+                    src="./img/basic_pictures/icon_watsapp.png"
                     alt="watsapp"
                 /></a>
               </div>
@@ -196,7 +196,7 @@
         <div class="lessons__block-points">
           <div class="lessons__block-item inner-top">
             <div class="lessons__img">
-              <img src="/img/img/lessons/girl.png" alt="girl" />
+              <img src="./img/img/lessons/girl.png" alt="girl" />
             </div>
             <div class="lessons__block-text">
               <h3>Живые уроки с учителем</h3>
@@ -215,12 +215,12 @@
               </p>
             </div>
             <div class="lessons__img">
-              <img src="/img/img/lessons/calendar.png" alt="girl" />
+              <img src="./img/img/lessons/calendar.png" alt="girl" />
             </div>
           </div>
           <div class="lessons__block-item inner-top">
             <div class="lessons__img">
-              <img src="/img/img/lessons/ruler.png" alt="girl" />
+              <img src="./img/img/lessons/ruler.png" alt="girl" />
             </div>
             <div class="lessons__block-text">
               <h3>Домашнее задание</h3>
@@ -239,7 +239,7 @@
               </p>
             </div>
             <div class="lessons__img">
-              <img src="/img/img/lessons/notebook.png" alt="girl" />
+              <img src="./img/img/lessons/notebook.png" alt="girl" />
             </div>
           </div>
         </div>
@@ -292,20 +292,20 @@
                   <a href="https://telegram.org/" target="_blank">
                     <img
                       class="net-img"
-                      src="/img/basic_pictures/icon_telegramm.png"
+                      src="./img/basic_pictures/icon_telegramm.png"
                       alt="telegramm"
                   /></a>
                   <a href="https://web.whatsapp.com/" target="_blank"
                     ><img
                       class="net-img"
-                      src="/img/basic_pictures/icon_watsapp.png"
+                      src="./img/basic_pictures/icon_watsapp.png"
                       alt="watsapp"
                   /></a>
                 </div>
               </div>
             </div>
             <div class="privilege__block-img">
-              <img src="/img/img/privilege/privilege_img.png" alt="privilege" />
+              <img src="./img/img/privilege/privilege_img.png" alt="privilege" />
             </div>
           </div>
         </div>
@@ -372,7 +372,7 @@
         <div class="description__block-inner">
           <div class="description__item">
             <div class="description__img">
-              <img src="/img/img/description/lamp.png" alt="lamp" />
+              <img src="./img/img/description/lamp.png" alt="lamp" />
             </div>
             <h3>Удобный график занятий</h3>
             <p>
@@ -382,7 +382,7 @@
           </div>
           <div class="description__item">
             <div class="description__img">
-              <img src="/img/img/description/glasses.png" alt="glasses" />
+              <img src="./img/img/description/glasses.png" alt="glasses" />
             </div>
             <h3>Записи уроков доступны всегда</h3>
             <p>
@@ -392,7 +392,7 @@
           </div>
           <div class="description__item">
             <div class="description__img">
-              <img src="/img/img/description/learning.png" alt="learning" />
+              <img src="./img/img/description/learning.png" alt="learning" />
             </div>
             <h3>Сбалансированная нагрузка</h3>
             <p>
@@ -401,7 +401,7 @@
           </div>
           <div class="description__item">
             <div class="description__img">
-              <img src="/img/img/description/bagpack.png" alt="bagpack" />
+              <img src="./img/img/description/bagpack.png" alt="bagpack" />
             </div>
             <h3>Не нужно покупать школьную форму и канцелярию</h3>
             <p>
@@ -411,7 +411,7 @@
           </div>
           <div class="description__item">
             <div class="description__img">
-              <img src="/img/img/description/biology.png" alt="biology" />
+              <img src="./img/img/description/biology.png" alt="biology" />
             </div>
             <h3>Высококлассные педагоги</h3>
             <p>
@@ -421,7 +421,7 @@
           </div>
           <div class="description__item">
             <div class="description__img">
-              <img src="/img/img/description/computer.png" alt="computer" />
+              <img src="./img/img/description/computer.png" alt="computer" />
             </div>
             <h3>Никакого стресса</h3>
             <p>
@@ -446,13 +446,13 @@
                 <a href="https://telegram.org/" target="_blank">
                   <img
                     class="net-img"
-                    src="/img/basic_pictures/icon_telegramm.png"
+                    src="./img/basic_pictures/icon_telegramm.png"
                     alt="telegramm"
                 /></a>
                 <a href="https://web.whatsapp.com/" target="_blank"
                   ><img
                     class="net-img"
-                    src="/img/basic_pictures/icon_watsapp.png"
+                    src="./img/basic_pictures/icon_watsapp.png"
                     alt="watsapp"
                 /></a>
               </div>
@@ -542,7 +542,7 @@
             </p>
           </div>
           <div class="certificate__img">
-            <img src="/img/img/certificate/certificate.png" alt="certificate" />
+            <img src="./img/img/certificate/certificate.png" alt="certificate" />
           </div>
         </div>
       </div>
@@ -555,7 +555,7 @@
             <div class="comments__item-block block-vk">
               <div class="comments__item-author">
                 <div class="comments__item-img">
-                  <img src="/img/img/comments/vk.png" alt="vk" />
+                  <img src="./img/img/comments/vk.png" alt="vk" />
                 </div>
                 <div class="comments__item-box">
                   <h3 class="comments__item-name">Ольга Николаева</h3>
@@ -576,7 +576,7 @@
             <div class="comments__item-block block-vk">
               <div class="comments__item-author">
                 <div class="comments__item-img">
-                  <img src="/img/img/comments/vk.png" alt="vk" />
+                  <img src="./img/img/comments/vk.png" alt="vk" />
                 </div>
                 <div class="comments__item-box">
                   <h3 class="comments__item-name">Анна Смирнова</h3>
@@ -595,7 +595,7 @@
             <div class="comments__item-block block-inst">
               <div class="comments__item-author">
                 <div class="comments__item-img">
-                  <img src="/img/img/comments/instagram.png" alt="vk" />
+                  <img src="./img/img/comments/instagram.png" alt="vk" />
                 </div>
                 <div class="comments__item-box">
                   <h3 class="comments__item-name">Павел Красильников</h3>
@@ -1013,7 +1013,7 @@
             <div class="connection__block-img">
               <img
                 class="connection__img"
-                src="/img/img/connection/subjects_right.png"
+                src="./img/img/connection/subjects_right.png"
                 alt="connection"
               />
             </div>
@@ -1027,7 +1027,7 @@
           <div class="footer__block">
             <div class="footer__block-logo">
               <a class="footer__logo logo" href="#"
-                ><img src="/img/basic_pictures/logo.png" alt=">Школа будущего"
+                ><img src="./img/basic_pictures/logo.png" alt=">Школа будущего"
               /></a>
             </div>
             <div class="footer__class">
@@ -1046,19 +1046,19 @@
                 <a href="https://telegram.org/" target="_blank">
                   <img
                     class="net-img"
-                    src="/img/basic_pictures/icon_telegramm.png"
+                    src="./img/basic_pictures/icon_telegramm.png"
                     alt="telegramm"
                 /></a>
                 <a href="https://www.youtube.com/" target="_blank">
                   <img
                     class="net-img"
-                    src="/img/basic_pictures/icon_youtube.png"
+                    src="./img/basic_pictures/icon_youtube.png"
                     alt="watsapp"
                 /></a>
                 <a href="https://vk.com/" target="_blank">
                   <img
                     class="net-img"
-                    src="/img/basic_pictures/icon_vk.png"
+                    src="./img/basic_pictures/icon_vk.png"
                     alt="watsapp"
                 /></a>
               </div>
